samples/_failures_safe/1760961858_665402_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_adba70dd.c: In function ‘main’:
./samples/SAFE/__tmp_adba70dd.c:169:9: error: expected expression at end of input
  169 |         test_data[i] = (uint8_t)(i %
      |         ^~~~~~~~~
./samples/SAFE/__tmp_adba70dd.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_adba70dd.c:169:9: error: expected declaration or statement at end of input
